# ai_final_proj

./: .gitignore  README.md  app.py  interview test.txt  pyproject.toml  requirements.txt  sample.txt  sample_interview.txt  style.css
env/: pyvenv.cfg
